font-family add

--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
         style="max-width: 650px; margin-left: auto; margin-right: auto; background-color: #FFFFFF; padding-left: 24px; padding-right: 24px;">
         <h2 style="color: #040404; text-align: center;
         font-size: 36px;
-        font-weight: 700;
+        font-weight: 700; font-family: Roboto;
         line-height: normal; padding-top: 32px; padding-bottom: 20px;">BENEFITS</h2>
         <table>
             <tr>
@@ -30,11 +30,11 @@
                 <td style="padding-left: 12px;">
                     <p style="color: #040404; margin: 0 !important;
                 font-size: 16px;
-                font-style: normal;
+                font-style: normal; font-family:Roboto;
                 font-weight: 700; line-height: 150%; ">Instant Verification</p>
                     <p style="color: #686968; margin: 0 !important; padding-top: 4px;
                 font-size: 14px;
-                font-style: normal;
+                font-style: normal; font-family:Roboto;
                 font-weight: 400;">Gain credibility in your industry by showcasing verified jobs.</p>
                 </td>
             </tr>
@@ -44,11 +44,11 @@
                 <td style="padding-left: 12px; padding-top: 20px;">
                     <p style="color: #040404; margin: 0 !important;
                 font-size: 16px;
-                font-style: normal;
+                font-style: normal; font-family:Roboto;
                 font-weight: 700; line-height: 150%; ">Build Your Portfolio</p>
                     <p style="color: #686968; margin: 0 !important; padding-top: 4px;
                 font-size: 14px;
-                font-style: normal;
+                font-style: normal; font-family:Roboto;
                 font-weight: 400;">Create a stunning portfolio to showcase your work</p>
                 </td>
             </tr>
@@ -58,11 +58,11 @@
                 <td style="padding-left: 12px; padding-top: 20px;">
                     <p style="color: #040404; margin: 0 !important;
                 font-size: 16px;
-                font-style: normal;
+                font-style: normal; font-family:Roboto;
                 font-weight: 700; line-height: 150%; ">Access to Top Talent</p>
                     <p style="color: #686968; margin: 0 !important; padding-top: 4px;
                 font-size: 14px;
-                font-style: normal;
+                font-style: normal; font-family:Roboto;
                 font-weight: 400;">Connect with a network of talented professionals.</p>
                 </td>
             </tr>
@@ -72,10 +72,10 @@
                 <td style="padding-left: 12px; padding-top: 20px;">
                     <p style="color: #040404; margin: 0 !important;
                 font-size: 16px;
-                font-style: normal;
+                font-style: normal; font-family:Roboto;
                 font-weight: 700; line-height: 150%; ">Effortless Contact Management</p>
                     <p style="color: #686968; margin: 0 !important; padding-top: 4px;
-                font-size: 14px;
+                font-size: 14px; font-family:Roboto;
                 font-style: normal;
                 font-weight: 400;">Maintain an organised contact list.</p>
                 </td>
@@ -86,11 +86,11 @@
                 <td style="padding-left: 12px; padding-top: 20px;">
                     <p style="color: #040404; margin: 0 !important;
                 font-size: 16px;
-                font-style: normal;
+                font-style: normal; font-family: Roboto;
                 font-weight: 700; line-height: 150%; ">Stay In the Loop</p>
                     <p style="color: #686968; margin: 0 !important; padding-top: 4px;
                 font-size: 14px;
-                font-style: normal;
+                font-style: normal; font-family: Roboto;
                 font-weight: 400;">Receive daily digest emails for easy verification requests.</p>
                 </td>
             </tr>
@@ -99,7 +99,7 @@
         background: #DCE161; color: black; text-align: center;
 font-size: 16px; border: none; margin-top: 32px; margin-bottom: 50px;
 font-weight: 700;
-line-height: normal;
+line-height: normal; font-family: Roboto;
 text-transform: uppercase;">Signup INSTANTLY</button>
     </div>
     <div
@@ -109,7 +109,7 @@ text-transform: uppercase;">Signup INSTANTLY</button>
         font-size: 14px;
         font-weight: 400;
         line-height: normal;
-        text-transform: uppercase;">Privacy Policy | Terms & Conditions | Legal</p>
+        text-transform: uppercase; font-family:Roboto;">Privacy Policy | Terms & Conditions | Legal</p>
         <table style="vertical-align: middle; margin-left: auto; margin-right: auto; margin-top: 16px;">
             <tr>
                 <td><a href="https://www.facebook.com/" target="_blank"><img src="https://i.ibb.co/HnSLmKr/fb.png"
@@ -123,7 +123,7 @@ text-transform: uppercase;">Signup INSTANTLY</button>
             </tr>
         </table>
         <p style="color: #4A4A4A; padding-top: 16px; padding-bottom: 36px;
-        text-align: center;
+        text-align: center; font-family:Roboto;
         font-size: 14px;
         font-weight: 500;
         line-height: 20px;">©2023 werc</p>
