change button style

--- a/index.html
+++ b/index.html
@@ -15,31 +15,6 @@
             margin: 0;
             text-decoration: none;
         }
-
-        .mysignin {
-            font-family: Roboto;
-            font-size: 16px;
-            font-weight: 700;
-            text-transform: uppercase;
-            color: #000;
-            background-color: #DCE161;
-            padding-top: 18px;
-            padding-bottom: 18px;
-            width: 100%;
-            padding-left: 50px;
-            padding-right: 50px;
-            border-radius: 16px;
-            border: 0;
-            /* text-wrap: nowrap; */
-            cursor: pointer;
-        }
-
-        @media (min-width:576px) {
-            .mysignin {
-                padding-left: 168px;
-                padding-right: 168px;
-            }
-        }
     </style>
 
 </head>
@@ -71,7 +46,8 @@
                     to
                     hire others.</p>
                 <div style="text-align: center; margin-top: 59px;">
-                    <button class="mysignin">Sign
+                    <button
+                        style="font-family: Roboto;font-size: 16px;font-weight: 700;text-transform: uppercase;color: #000;background-color: #DCE161;padding: 18px ;width: 100%;border-radius: 16px;border: 0;cursor: pointer;">Sign
                         ın & access your projects</button>
                 </div>
             </div>
